--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.datasource.password=123456
 
 
 mybatis.mapper-locations=classpath:mappers/*.xml
+
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=
+
+#上传文件路径，根据部署情况，请自行修改
+file.upload.dir=D:/thylovezj-mall/res/
